LOK-2359:Refine Interface for service monitors. (#1758)
* LOK-2359:Refine Interface for service monitors.
LOK-2370:Remove MonitoredService class and just use values from provided config.

* spotless:apply

* Assignment of Monitor NodeId and ServiceId values in Task definition for service

* In case of exception nodeid and serviceid are handled

* Fixes based on review

* code review updates

* merged develop with ntp plugin adjustments, ntp validation done

* LOK-2359, added separate proto for service entry, types.proto restored

* LOK-2359, types.proto restored.

* LOK-2359, merged http stuff with refinement changes

* LOK-2359, spotless apply

* LOK-2359, merged develop, http monitor adjustments

---------

Co-authored-by: shahidmunir <shahid.munir@dataqhealth.com>
Co-authored-by: Ubuntu <azureuser@desktop02.sgr4uhhjfmtu5pq0fmfx4kqjee.bx.internal.cloudapp.net>
Co-authored-by: smunir-onms <smunir@nanthealth.com>